fix(splitter): nested resize handles have the wrong background
see telerik/kendo-theme-default#861

--- a/packages/default/scss/splitter/_layout.scss
+++ b/packages/default/scss/splitter/_layout.scss
@@ -93,7 +93,7 @@
         height: $splitter-drag-handle-length;
     }
 
-    .k-splitter .k-resize-handle {
+    .k-splitbar .k-resize-handle {
         display: none;
         background-color: currentColor;
     }
